0.8.0/_sources/gallery/nD_multiscale_image_non_uniform.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/nD_multiscale_image_non_uniform.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_nD_multiscale_image_non_uniform.py:


nD multiscale image non-uniform
===============================

Displays an nD multiscale image

.. tags:: visualization-advanced

.. GENERATED FROM PYTHON SOURCE LINES 9-33



.. image-sg:: /gallery/images/sphx_glr_nD_multiscale_image_non_uniform_001.png
   :alt: nD multiscale image non uniform
   :srcset: /gallery/images/sphx_glr_nD_multiscale_image_non_uniform_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    multiscale level shapes:  [(6, 1536, 1536, 3), (6, 768, 768, 3), (6, 384, 384, 3), (6, 192, 192, 3)]
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    import numpy as np
    from skimage import data
    from skimage.transform import pyramid_gaussian

    import napari

    # create multiscale from astronaut image
    astronaut = data.astronaut()
    base = np.tile(astronaut, (3, 3, 1))
    multiscale = list(
        pyramid_gaussian(base, downscale=2, max_layer=3, channel_axis=-1)
    )
    multiscale = [
        np.array([p * (abs(3 - i) + 1) / 4 for i in range(6)]) for p in multiscale
    ]
    print('multiscale level shapes: ', [p.shape for p in multiscale])

    # add image multiscale
    viewer = napari.Viewer()
    layer = viewer.add_image(multiscale, multiscale=True)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_nD_multiscale_image_non_uniform.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: nD_multiscale_image_non_uniform.ipynb <nD_multiscale_image_non_uniform.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: nD_multiscale_image_non_uniform.py <nD_multiscale_image_non_uniform.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: nD_multiscale_image_non_uniform.zip <nD_multiscale_image_non_uniform.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
